// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryButton should render properly (isSmall) 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#000000",
        "borderRadius": 10,
        "height": 300,
        "marginRight": 7.5,
        "overflow": "hidden",
        "width": 300,
      },
      Object {
        "height": 125,
        "marginRight": 3.75,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "https://cdn.shopify.com/s/files/1/1825/3189/products/1589d1c85bfdd70a943bbcc2c75374d6.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "borderRadius": 10,
        "flex": 1,
        "justifyContent": "space-between",
        "overflow": "hidden",
        "padding": 15,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "borderBottomColor": "#FFFFFF",
          "color": "#FFFFFF",
          "fontSize": 22,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Activewear
    </Text>
  </View>
</View>
`;

exports[`CategoryButton should render properly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#000000",
        "borderRadius": 10,
        "height": 300,
        "marginRight": 7.5,
        "overflow": "hidden",
        "width": 300,
      },
      undefined,
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "https://cdn.shopify.com/s/files/1/1825/3189/products/1589d1c85bfdd70a943bbcc2c75374d6.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "borderRadius": 10,
        "flex": 1,
        "justifyContent": "space-between",
        "overflow": "hidden",
        "padding": 15,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "borderBottomColor": "#FFFFFF",
          "color": "#FFFFFF",
          "fontSize": 22,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Activewear
    </Text>
  </View>
</View>
`;
